Towards csrf checking

--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -16,14 +16,17 @@ play.filters.enabled += play.filters.https.RedirectHttpsFilter
 play.filters.https.redirectEnabled = true
 
 play.filters.cors {
-  pathPrefixes = ["/", "/lookup", "lookup"]
-  allowedOrigins = ["http://localhost", "https://localhost", "http://localhost:9000", "https://localhost:9443"]
-  allowedHttpMethods = ["GET", "POST", "PUT", "DELETE"]
-  allowedHttpHeaders = ["Accept"]
-  # preflightMaxAge = 3 days
-  serveForbiddenOrigins = true
-  exposedHeaders = ["Access-Control-Allow-Origin"]
+   pathPrefixes = ["/"]
+   # TODO: Add actual domain later! (See above!)
+   allowedOrigins = ["http://localhost", "https://localhost", "http://localhost:9000", "https://localhost:9443"]
+   allowedHttpMethods = ["GET", "POST", "PUT", "DELETE"]
+   # allowedHttpHeaders = ["Accept"]
+   # preflightMaxAge = 3 days
+   # serveForbiddenOrigins = true
+   exposedHeaders = ["Access-Control-Allow-Origin"]
 }
+play.filters.csrf.cookie.name = "csrfCookie"
+play.filters.csrf.token.name = "csrfToken"
 
 # https://stackoverflow.com/questions/44381638/how-to-configure-ssl-certificate-on-play-framework
 # https://sysgears.com/articles/how-to-use-https-with-play-framework/
