Undo CSRF injection in get/post; ADD SAMESITE-COOKIES! YAY!

--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -31,6 +31,7 @@ play.filters.csrf.token.name = "csrfToken"
 # https://stackoverflow.com/questions/44381638/how-to-configure-ssl-certificate-on-play-framework
 # https://sysgears.com/articles/how-to-use-https-with-play-framework/
 play.http.session.httpOnly = false
+play.http.session.sameSite = "strict"
 play.http.secret.key = ${OOREP_APPLICATION_SECRET}  # https://www.playframework.com/documentation/2.7.x/ApplicationSecret
 play.server.https.keyStore.path = ${OOREP_KEYSTORE_FILE}
 play.server.https.keyStore.type = "JKS"
