fix csrf-bug (hopefully); filter 0-valued rubrics in analysis

--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -9,7 +9,7 @@ play.filters.headers.contentSecurityPolicy = "script-src 'self' 'unsafe-inline' 
 play.filters.enabled += "play.filters.csrf.CSRFFilter"
 play.filters.csrf.cookie.name = "csrfCookie"
 play.filters.csrf.token.name = "csrfToken"
-play.filters.csrf.cookie.secure = true
+play.filters.csrf.cookie.secure = false             # This has to be false or Csrf-Token is not sent back via browser
 
 # ############################################################################
 # Not needed if reverse proxy (which uses https) is active:
@@ -24,9 +24,9 @@ play.filters.csrf.cookie.secure = true
 # play.server.https.keyStore.password = ${OOREP_KEYSTORE_PASS}
 # ############################################################################
 
+play.http.session.secure = false                    # This has to be false or Csrf-Token is not sent back via browser
 play.http.session.httpOnly = true
 play.http.session.sameSite = "strict"               # This is **crucial** against csrf attacks!
-play.http.session.secure = true
 play.http.secret.key = ${OOREP_APPLICATION_SECRET}  # https://www.playframework.com/documentation/2.7.x/ApplicationSecret
 
 play.modules.enabled += "play.api.db.DBModule"
